--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PanemCode1
+application.vendor=kryst
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,17 @@ dist.jar=${dist.dir}/PanemCode1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PanemCode1
+endorsed.classpath=
 excludes=
 file.reference.CompilerTools.jar=src\\libraries\\CompilerTools.jar
+file.reference.flatlaf-3.2.5.jar=src\\libraries\\flatlaf-3.2.5.jar
 file.reference.JFlex.jar=src\\libraries\\JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.CompilerTools.jar}:\
-    ${file.reference.JFlex.jar}
+    ${file.reference.JFlex.jar}:\
+    ${file.reference.flatlaf-3.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
